--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@capacitor/core": "^7.2.0",
     "@capacitor/ios": "^7.2.0",
     "@hookform/resolvers": "^5.0.1",
+    "@maphubs/tokml": "^0.6.1",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.14",
